@@ -11,7 +11,6 @@ import org.springframework.stereotype.Repository;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Repository
@@ -48,10 +47,10 @@ public class OrderRepositoryImpl implements OrderRepository {
     public List<Order> findPendingOrdersOlderThan10Minutes(LocalDateTime time) {
         LocalDateTime tenMinutesAgo = time.minusMinutes(10);
 
-        return orderJpaRepository.findByStatusAndCreatedAtBefore(OrderStatus.PENDING, tenMinutesAgo)
+        return orderJpaRepository.findByStatusAndCreatedAtBefore(OrderStatus.PENDING,tenMinutesAgo)
                 .stream()
                 .map(OrderEntity::toOrder)
-                .collect(Collectors.toList());
+                .toList();
     }
 
 }
